fixes unintentionally invisible elements

--- a/packages/cms/src/components/sections/Section.css
+++ b/packages/cms/src/components/sections/Section.css
@@ -1,7 +1,6 @@
 @import "../../css/mixins.css";
 
 .section {
-  color: white;
   display: flex;
   flex-direction: row;
   flex-wrap: nowrap;
